# robot-insprill

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  build.gradle  build.gradle.kts  docker-compose.yml  go.mod  main.go  settings.gradle
.github/workflows/: build.yml  rust.yml
configs/: codedred.yml  dev.yml
docs/configuration/: forms.md
features/: suggestions.go
src/: config.rs  main.rs
src/command/: binfile.rs  clear.rs  mod.rs
src/main/java-templates/net/insprill/robotinsprill/: BuildParameters.java.peb
src/main/java/net/insprill/robotinsprill/: RobotInsprill.java
src/main/kotlin/net/insprill/robotinsprill/: RobotInsprill.kt
src/main/kotlin/net/insprill/robotinsprill/autoaction/: AutoActions.kt  MediaType.kt
src/main/kotlin/net/insprill/robotinsprill/command/: CommandManager.kt
src/main/kotlin/net/insprill/robotinsprill/command/message/: BinFiles.kt  Google.kt
src/main/kotlin/net/insprill/robotinsprill/command/slash/: Clear.kt  Post.kt  SelectRoles.kt
src/main/kotlin/net/insprill/robotinsprill/configuration/: BotConfig.kt
src/main/kotlin/net/insprill/robotinsprill/extension/: InteractionResponseExtension.kt
src/main/kotlin/net/insprill/robotinsprill/form/: FieldInfoType.kt  FormHandle.kt
src/main/kotlin/net/insprill/robotinsprill/statistic/: Statistic.kt  StatisticManager.kt
