[package]
name = "robot-insprill"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
