[package]
name = "robot-insprill"
version = "3.0.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "macos-system-configuration", "http2", "charset"] }
urlencoding = "2"
serde = "1"
serde_yaml = "0.9"
struct_iterable = "0.1"

[profile.release]
debug = true
